Java 11 source code style update