@@ -620,7 +620,7 @@ public class PlotterPanel extends JPanel {
 		 * @see #variableName
 		 */
 		private CalcSystem getParser() {
-			if (expression==null || expression.trim().isEmpty()) return null;
+			if (expression==null || expression.isBlank()) return null;
 			final CalcSystem calc=new CalcSystem(variableName);
 			if (calc.parse(expression)>=0) return null;
 			return calc;
