@@ -124,7 +124,7 @@ public class CompareSelectDialog extends BaseDialog  {
 		if (statisticFiles==null) return new File[0];
 		List<File> files=new ArrayList<>();
 		for (File file : statisticFiles) if (file!=null) files.add(file);
-		return files.toArray(new File[0]);
+		return files.toArray(File[]::new);
 	}
 
 	@Override
@@ -168,7 +168,7 @@ public class CompareSelectDialog extends BaseDialog  {
 			if (s.isEmpty()) continue;
 			files.add(new File(s));
 		}
-		statisticFiles=files.toArray(new File[0]);
+		statisticFiles=files.toArray(File[]::new);
 	}
 
 	/**
@@ -245,7 +245,7 @@ public class CompareSelectDialog extends BaseDialog  {
 		}
 
 		int nextFree=-1;
-		for (int i=0;i<statisticTextFields.length;i++) if (statisticTextFields[i].getText().trim().isEmpty()) {nextFree=i; break;}
+		for (int i=0;i<statisticTextFields.length;i++) if (statisticTextFields[i].getText().isBlank()) {nextFree=i; break;}
 		if (nextFree==-1) {
 			if (lastDrop==-1) nextFree=0; else {
 				if (lastDrop==statisticTextFields.length-1) nextFree=0; else nextFree=lastDrop+1;
